--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,5 @@
 .App {
- display: flex;
- flex-direction:row;
  background-color:rgba(44, 62, 80, 1);
- justify-content:space-between;
  max-width: 800px;
  align-self: auto;
  margin:10px auto auto;
@@ -10,6 +7,21 @@
  border-radius: 10px;
  box-shadow: 0 0 50px 0 rgba(253, 203, 110,0.2)
   
+}
+
+.Content{
+ display: flex;
+ flex-direction:row;
+ justify-content:space-between;
+}
+
+h1{
+background-color:#00cec9;
+color:white;
+text-align: center;
+margin: auto 30px;
+border-radius: 10px;
+
 }
 
 .App-logo {
